slightly done in the navbar

--- a/main/index.html
+++ b/main/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Critters</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="main.js"></script>
 </head>
 <body>
-    
+    <header id="nav">
+        <nav>
+            <img src="./assets/logo.svg" alt="logo">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <a href="#">
+                <button type="button">Buy Token</button>
+            </a>
+        </nav>
+    </header>
 </body>
 </html>
