added some visuals

--- a/main/index.html
+++ b/main/index.html
@@ -12,8 +12,8 @@
         <nav>
             <img src="./assets/logo.svg" alt="logo">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#main">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <a href="#">
@@ -21,5 +21,18 @@
             </a>
         </nav>
     </header>
+    <main class="main">
+        <section id="hero">
+            <h1>Welcome to Crypto Critters</h1>
+            <p>A cryptocurrency platform for collectibles and game tokens.</p>
+            <a href="#">Discover More</a>
+        </sectio>
+    </main>
+    <main class="about">
+        <section id="about">
+            <h2>About Crypto Critters</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod libero vel orci semper, vel suscipit nunc dignissim. Donec consectetur, tortor id consectetur malesuada, nisi velit condimentum metus, sed posuere risus justo vel nunc. Nulla facilisi. Nullam faucibus, dolor a scelerisque rutrum, justo nunc sollicitudin lacus, at ultricies ipsum ex at velit. Sed varius, justo et consectetur semper, nunc velit rutrum velit, vel consectetur nunc velit sed massa.</p>
+        </section>
+    </main>
 </body>
 </html>
